no runtime debug penalty (compile flag, separate lib)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,11 @@ libxunscrollzoom_la_SOURCES = libxunscrollzoom.c
 libxunscrollzoom_la_CFLAGS = -O1
 libxunscrollzoom_la_LIBADD = -ldl
 
+lib_LTLIBRARIES += libxunscrollzoom-debug.la
+libxunscrollzoom_debug_la_SOURCES = libxunscrollzoom.c
+libxunscrollzoom_debug_la_CFLAGS = -O1 -DDEBUG
+libxunscrollzoom_debug_la_LIBADD = -ldl
+
 
 #dist_man_MANS = libxunscrollzoom.1 xunscrollzoom.1 xunscrollzoom-debug.1
 
