Link against libXi

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,12 +28,12 @@ CFLAGS += -Wall
 lib_LTLIBRARIES = libxunscrollzoom.la
 libxunscrollzoom_la_SOURCES = libxunscrollzoom.c
 libxunscrollzoom_la_CFLAGS = -O1
-libxunscrollzoom_la_LIBADD = -ldl
+libxunscrollzoom_la_LIBADD = -ldl -lXi
 
 lib_LTLIBRARIES += libxunscrollzoom-debug.la
 libxunscrollzoom_debug_la_SOURCES = libxunscrollzoom.c
 libxunscrollzoom_debug_la_CFLAGS = -O1 -DDEBUG
-libxunscrollzoom_debug_la_LIBADD = -ldl
+libxunscrollzoom_debug_la_LIBADD = -ldl -lXi
 
 
 #dist_man_MANS = libxunscrollzoom.1 xunscrollzoom.1 xunscrollzoom-debug.1
